[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Kompy"
version = "0.0.4"
authors = [
    { name = "Matteo Villosio", email = "github@matteovillosio.com" },
]
description = "A Python wrapper for Komoot APIs"
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tsadoq/kompy"
"Bug Tracker" = "https://github.com/tsadoq/kompy/issues"