[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Kompy"
version = "0.0.8"
authors = [
    { name = "Matteo Villosio", email = "github@matteovillosio.com" },
]
description = "A Python wrapper for Komoot APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dateutils>=0.6.12",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "pillow>=10.1.0",
    "gpxpy>=1.6.1",
    "fit_tool>=0.9.13",
    "pdoc>=14.1.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tsadoq/kompy"
"Bug Tracker" = "https://github.com/tsadoq/kompy/issues"